// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox component > Checkbox checked should render correctly 1`] = `
[
  <button
    className="relative flex h-5 w-5 cursor-pointer flex-col items-center justify-center rounded border text-white 
        false
        false
        bg-primary focus:bg-primary-dark cursor-pointer
        false"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <svg
      className="absolute -inset-px"
      fill="none"
      height={20}
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m8.85955 15c.38202 0 .67978-.1461.88202-.4551l5.23593-8.00557c.1461-.22472.2079-.43259.2079-.62922 0-.52809-.3933-.91011-.9326-.91011-.3708 0-.6011.13483-.8258.48876l-4.59554 7.24724-2.33146-2.8933c-.20787-.24719-.43259-.35955-.74719-.35955-.54495 0-.9382.38764-.9382.91575 0 .2359.07303.4438.27528.6741l2.89887 3.5113c.24158.2865.51124.4157.87079.4157z"
        fill="currentColor"
      />
    </svg>
  </button>,
  <input
    checked={true}
    className="base-checkbox h-0 w-0 appearance-none opacity-0"
    readOnly={true}
    required={false}
    type="checkbox"
  />,
]
`;

exports[`Checkbox component > Checkbox disabled and checked should render correctly 1`] = `
[
  <button
    className="relative flex h-5 w-5 cursor-pointer flex-col items-center justify-center rounded border text-white 
        false
        false
        false
        bg-gray-20 cursor-auto"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <svg
      className="absolute -inset-px"
      fill="none"
      height={20}
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m8.85955 15c.38202 0 .67978-.1461.88202-.4551l5.23593-8.00557c.1461-.22472.2079-.43259.2079-.62922 0-.52809-.3933-.91011-.9326-.91011-.3708 0-.6011.13483-.8258.48876l-4.59554 7.24724-2.33146-2.8933c-.20787-.24719-.43259-.35955-.74719-.35955-.54495 0-.9382.38764-.9382.91575 0 .2359.07303.4438.27528.6741l2.89887 3.5113c.24158.2865.51124.4157.87079.4157z"
        fill="currentColor"
      />
    </svg>
  </button>,
  <input
    checked={true}
    className="base-checkbox h-0 w-0 appearance-none opacity-0"
    readOnly={true}
    required={false}
    type="checkbox"
  />,
]
`;

exports[`Checkbox component > Checkbox disabled and indetermiante should render correctly 1`] = `
[
  <button
    className="relative flex h-5 w-5 cursor-pointer flex-col items-center justify-center rounded border text-white 
        false
        false
        false
        bg-gray-20 cursor-auto"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <svg
      className="absolute -inset-px h-5 w-5 px-0.5"
      fill="currentColor"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224,128a8,8,0,0,1-8,8H40a8,8,0,0,1,0-16H216A8,8,0,0,1,224,128Z"
      />
    </svg>
  </button>,
  <input
    checked={true}
    className="base-checkbox h-0 w-0 appearance-none opacity-0"
    readOnly={true}
    required={false}
    type="checkbox"
  />,
]
`;

exports[`Checkbox component > Checkbox disabled and not checked should render correctly 1`] = `
[
  <button
    className="relative flex h-5 w-5 cursor-pointer flex-col items-center justify-center rounded border text-white 
        bg-surface border border-gray-10 cursor-auto
        false
        false
        false"
    onClick={[Function]}
    onKeyDown={[Function]}
  />,
  <input
    checked={false}
    className="base-checkbox h-0 w-0 appearance-none opacity-0"
    readOnly={true}
    required={false}
    type="checkbox"
  />,
]
`;

exports[`Checkbox component > Checkbox enabled and indetermiante should render correctly 1`] = `
[
  <button
    className="relative flex h-5 w-5 cursor-pointer flex-col items-center justify-center rounded border text-white 
        false
        false
        bg-primary focus:bg-primary-dark cursor-pointer
        false"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <svg
      className="absolute -inset-px h-5 w-5 px-0.5"
      fill="currentColor"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224,128a8,8,0,0,1-8,8H40a8,8,0,0,1,0-16H216A8,8,0,0,1,224,128Z"
      />
    </svg>
  </button>,
  <input
    checked={true}
    className="base-checkbox h-0 w-0 appearance-none opacity-0"
    readOnly={true}
    required={false}
    type="checkbox"
  />,
]
`;

exports[`Checkbox component > Checkbox enabled and not checked should render correctly 1`] = `
[
  <button
    className="relative flex h-5 w-5 cursor-pointer flex-col items-center justify-center rounded border text-white 
        false
        bg-surface border border-gray-30 cursor-pointer
        false
        false"
    onClick={[Function]}
    onKeyDown={[Function]}
  />,
  <input
    checked={false}
    className="base-checkbox h-0 w-0 appearance-none opacity-0"
    readOnly={true}
    required={false}
    type="checkbox"
  />,
]
`;
